# libvips-rust-bindings

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  .tool-versions  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  compile.sh  package.json  renovate.json  vips.h
.github/workflows/: conventional-prs.yml  lint-pr-title-preview-outputErrorMessage.yml  release.yml
examples/: png_to_jpeg.rs
generator/: Cargo.toml  Dockerfile  build.rs  build.sh  compile.sh  generate.sh  introspect.c  vips.h
src/: bindings.rs  error.rs  image.rs  lib.rs  manual.rs  ops.rs  utils.rs
