[package]
name = "libvips"
description = "Safe bindings for libvips"
version = "1.1.0"
authors = ["Augusto César Dias <augusto.dias@olx.com>"]
repository = "https://github.com/augustocdias/libvips-rust-bindings"
readme = "README.md"
license = "MIT"
edition = "2018"
keywords = ["libvips", "bindgen", "image", "bindings"]
categories = ["multimedia::images", "multimedia::encoding", "graphics"]

[build-dependencies]
bindgen = "0.51"
cc = "1.0"
Inflector = "0.11"
which = "3.1"

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
