# (c) Copyright 2019-2020 OLX
[package]
name = "libvips"
description = "Safe bindings for libvips"
version = "1.4.2"
authors = ["Augusto César Dias <augusto.c.dias@gmail.com>"]
repository = "https://github.com/augustocdias/libvips-rust-bindings"
readme = "README.md"
license = "MIT"
edition = "2018"
keywords = ["libvips", "bindgen", "image", "bindings"]
categories = ["multimedia::images", "multimedia::encoding", "graphics"]
exclude = ["generator"]

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
