# (c) Copyright 2019-2023 OLX
[package]
name = "libvips"
description = "Safe bindings for libvips"
version = "1.5.1"
authors = ["Augusto César Dias <augusto.c.dias@gmail.com>"]
repository = "https://github.com/olxgroup-oss/libvips-rust-bindings"
readme = "README.md"
license = "MIT"
edition = "2021"
keywords = ["libvips", "bindgen", "image", "bindings"]
categories = ["multimedia::images", "multimedia::encoding", "graphics"]
exclude = ["generator"]

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
